--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "your-project-name",
+  "version": "1.0.0",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node schedule/index.ts"
+  },
   "devDependencies": {
     "typescript": "^5.4.5"
   }
