--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-project-name",
+  "name": "cronic",
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
@@ -8,6 +8,8 @@
     "dev": "ts-node schedule/index.ts"
   },
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "ts-node": "^9.0.0",
+    "@types/node": "^14.0.0"
   }
 }
