--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES6",
     "module": "commonjs",
+    "target": "es6",
+    "baseUrl": "./",
     "outDir": "./dist",
-    "rootDir": "schedule",
-    "strict": true,
-    "moduleResolution": "node",
+    "paths": {
+      "*": ["node_modules/*", "*"]
+    },
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "resolveJsonModule": true
   },
-  "include": ["schedule"],
-  "exclude": ["node_modules"]
+  "include": ["./**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
