--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
   "name": "cronic",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node schedule/index.ts"
-  },
-  "devDependencies": {
-    "typescript": "^5.4.5",
-    "ts-node": "^9.0.0",
-    "@types/node": "^14.0.0"
+    "start": "node --experimental-specifier-resolution=node index.js"
   }
 }
