--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node --experimental-specifier-resolution=node index.js"
+    "start": "node index.js"
   }
 }
